--- a/src/Blazor/Neuroglia.Blazor.Dagre/Templates/Circle.razor
+++ b/src/Blazor/Neuroglia.Blazor.Dagre/Templates/Circle.razor
@@ -5,6 +5,5 @@
 />
 
 @code {
-    [Parameter]
-    public virtual IBoundingBox BBox { get; set; } = null!;
+    [Parameter] public virtual IBoundingBox BBox { get; set; } = null!;
 }
