--- a/src/Blazor/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
+++ b/src/Blazor/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
@@ -31,11 +31,9 @@
 </g>
 
 @code {
-    [CascadingParameter]
-    public virtual IGraphViewModel Graph { get; set; } = null!;
+    [CascadingParameter] public virtual IGraphViewModel Graph { get; set; } = null!;
 
-    [Parameter]
-    public virtual IGraphElement Element { get; set; } = null!;
+    [Parameter] public virtual IGraphElement Element { get; set; } = null!;
 
     protected virtual INodeViewModel Node => (INodeViewModel)this.Element;
 }
