--- a/src/Blazor/Neuroglia.Blazor.Dagre/Templates/Rectangle.razor
+++ b/src/Blazor/Neuroglia.Blazor.Dagre/Templates/Rectangle.razor
@@ -9,13 +9,10 @@
 
 @code {
     
-    [Parameter]
-    public virtual IBoundingBox BBox { get; set; } = null!;
+    [Parameter] public virtual IBoundingBox BBox { get; set; } = null!;
     
-    [Parameter]
-    public virtual double? RadiusX { get; set; }
+    [Parameter] public virtual double? RadiusX { get; set; }
     
-    [Parameter]
-    public virtual double? RadiusY { get; set; }
+    [Parameter] public virtual double? RadiusY { get; set; }
 
 }
