--- a/src/Blazor/Neuroglia.Blazor.Dagre/Templates/EdgeTemplate.razor
+++ b/src/Blazor/Neuroglia.Blazor.Dagre/Templates/EdgeTemplate.razor
@@ -25,11 +25,9 @@
 </g>
 
 @code {
-    [CascadingParameter]
-    public virtual IGraphViewModel Graph { get; set; } = null!;
+    [CascadingParameter] public virtual IGraphViewModel Graph { get; set; } = null!;
 
-    [Parameter]
-    public virtual IGraphElement Element { get; set; } = null!;
+    [Parameter] public virtual IGraphElement Element { get; set; } = null!;
 
     protected virtual IEdgeViewModel Edge => (IEdgeViewModel)this.Element;
 
