--- a/src/Blazor/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
+++ b/src/Blazor/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
@@ -1,4 +1,6 @@
-﻿<g class="node @Node.CssClass" transform="translate(@((Node.X ?? 0).ToInvariantString()), @((Node.Y ?? 0).ToInvariantString()))">
+﻿@implements IDisposable
+
+<g class="node @Node.CssClass" transform="translate(@((Node.X ?? 0).ToInvariantString()), @((Node.Y ?? 0).ToInvariantString()))">
     <g class="node-shape">
         @if (Node.Shape == NodeShape.Circle)
         {
@@ -25,15 +27,86 @@
             </foreignObject>
         </g>
     }
-    @if (Graph.ShowConstruction) {
+    @if (Graph.EnableProfiling) {
         <circle cx="0" cy="0" r="1" fill="red" />
     }
 </g>
 
 @code {
+    private IGraphViewModel? graph;
     [CascadingParameter] public virtual IGraphViewModel Graph { get; set; } = null!;
 
+    private IGraphElement? element;
     [Parameter] public virtual IGraphElement Element { get; set; } = null!;
 
     protected virtual INodeViewModel Node => (INodeViewModel)this.Element;
+
+    protected bool isDirty = false;    
+    protected ProfilingTimer? profilingTimer;
+    protected bool enableProfiling
+    {
+        get => this.Graph?.EnableProfiling ?? false;
+        set
+        {
+            if (this.Graph != null && this.Graph.EnableProfiling != value) {
+                this.Graph.EnableProfiling = value;
+            }
+            if (value) this.CreateProfilingTimer();
+        }
+    }
+
+    protected virtual void CreateProfilingTimer()
+    {
+        if (this.profilingTimer == null)
+            this.profilingTimer = new ProfilingTimer("NodeTemplate", 3);
+    }
+
+    protected override void OnParametersSet()
+    {
+        if (this.graph != this.Graph)
+        {
+            this.graph = this.Graph;
+            this.isDirty = true;
+        }
+        if (this.element != this.Element)
+        {
+            this.element = this.Element;
+            this.Node.Changed += this.TriggerRender;
+            this.isDirty = true;
+        }
+        if (this.enableProfiling) this.CreateProfilingTimer();
+        this.profilingTimer?.Start();
+    }
+
+    protected void TriggerRender()
+    {
+        this.profilingTimer?.Start();
+        this.isDirty = true;
+        this.StateHasChanged();
+    }
+
+    protected override void OnAfterRender(bool firstRender)
+    {
+        this.profilingTimer?.Stop();
+    }
+
+    private bool disposed;
+    protected virtual void Dispose(bool disposing)
+    {
+        if (!this.disposed)
+        {
+            this.Node.Changed -= this.TriggerRender;
+            if (this.enableProfiling && this.profilingTimer != null)
+            {
+                this.profilingTimer.Dispose();
+            }
+            this.disposed = true;
+        }
+    }
+
+    public void Dispose()
+    {
+        this.Dispose(disposing: true);
+        GC.SuppressFinalize(this);
+    }
 }
