--- a/src/Blazor/Neuroglia.Blazor.Dagre/wwwroot/neuroglia-blazor-dagre.scss
+++ b/src/Blazor/Neuroglia.Blazor.Dagre/wwwroot/neuroglia-blazor-dagre.scss
@@ -38,28 +38,26 @@
     fill: #333;
 }
 
-.graph-controls {
-    .btn {
-        border: 1px solid transparent;
-        padding: 0.25rem 0.25rem;
-        line-height: 0.5;
-        border-radius: 0.25rem;
-        vertical-align: middle;
-        color: #333;
-        fill: #333;
-        border-color: #333;
-        transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+.graph-controls .btn {
+    border: 1px solid transparent;
+    padding: 0.25rem 0.25rem;
+    line-height: 0.5;
+    border-radius: 0.25rem;
+    vertical-align: middle;
+    color: #333;
+    fill: #333;
+    border-color: #333;
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
 
-        svg {
-            width: 18px;
-            height: 18px;
-        }
+.graph-controls .btn svg {
+    width: 18px;
+    height: 18px;
+}
 
-        &:hover {
-            color: #fff;
-            fill: #fff;
-            background-color: #333;
-            border-color: #333;
-        }
-    }
+.graph-controls .btn:hover {
+    color: #fff;
+    fill: #fff;
+    background-color: #333;
+    border-color: #333;
 }
