--- a/src/Neuroglia.Blazor.Dagre/Templates/EdgeTemplate.razor
+++ b/src/Neuroglia.Blazor.Dagre/Templates/EdgeTemplate.razor
@@ -7,58 +7,40 @@
     @if (LabelCenter != null && !string.IsNullOrWhiteSpace(Edge.Label)) {
         <g class="edge-label label">
             <foreignObject 
-                x="@((LabelCenter.X - Edge.BBox.Width / 2).ToInvariantString())"
-                y="@(LabelCenter.Y.ToInvariantString())" 
-                width="@Edge.BBox.Width.ToInvariantString()" 
+                x="@((LabelCenter.Position.X - Edge.Bounds.Size.Width / 2).ToInvariantString())"
+                y="@(LabelCenter.Position.Y.ToInvariantString())" 
+                width="@Edge.Bounds.Size.Width.ToInvariantString()" 
                 height="@Constants.LabelHeight"
             >
                 <div>@Edge.Label</div>
             </foreignObject>
         </g>
     }
-    @if (Graph.EnableProfiling) {
-        @foreach(var point in Edge.Points)
-        {
-            <circle cx="@point.X" cy="@point.Y" r="1" fill="red" />
-        }
-    }
 </g>
 
 @code {
+
     [CascadingParameter] public virtual IGraphViewModel Graph { get; set; } = null!;
 
     [Parameter] public virtual IGraphElement Element { get; set; } = null!;
 
     protected virtual IEdgeViewModel Edge => (IEdgeViewModel)this.Element;
 
-    protected virtual IPosition? LabelCenter { get; set; }
-
-    protected override void OnParametersSet()
-    {
-        if (this.Edge.Points.Any()) {
-            var index = (int)Math.Ceiling((double)(this.Edge.Points.Count() / 2)) - 1;
-            this.LabelCenter = this.Edge.Points.ElementAt(index);
-        }
-    }
+    protected virtual IPositionable? LabelCenter { get; set; }
 
     protected virtual string GetPath(IEdgeViewModel edge)
     {
-        switch(edge.Shape)
+        return edge.Shape switch
         {
-            case EdgeShape.BSpline:
-                //return PathBuilder.GetBSplinePath(edge.Points);                
-            default:
-                return PathBuilder.GetLinearPath(edge.Points);
-        }
+            // EdgeShape.BSpline => PathBuilder.GetBSplinePath(edge.Points), //todo
+            _ => PathBuilder.GetLinearPath(edge.Points)
+        };
     }
 
     protected virtual string? GetDefinitionUrl(string? marker)
     {
-        if (string.IsNullOrWhiteSpace(marker))
-        {
-            return null;
-        }
-        return $"url(#{marker})";
+        if (string.IsNullOrWhiteSpace(marker)) return null;
+        else return $"url(#{marker})";
     }
 
 }
