--- a/src/Neuroglia.Blazor.Dagre/Templates/InteractiveDynamicComponent.razor
+++ b/src/Neuroglia.Blazor.Dagre/Templates/InteractiveDynamicComponent.razor
@@ -2,12 +2,7 @@
 
 <g
     @ref="elementReference"
-    @onmouseenter="HandleOnMouseEnter"
-    @onmouseleave="HandleOnMouseLeave"
-    @onmousemove="HandleOnMouseMove"
-    @onmousedown="HandleOnMouseDown"
     @onmousedown:stopPropagation
-    @onmouseup="HandleOnMouseUp"
     @onmouseup:stopPropagation
 >
     <CascadingValue Value="graph">
@@ -18,34 +13,17 @@
 @code {
 
     IGraphViewModel? graph;
+    Type type = null!;
+    IDictionary<string, object>? parameters;
+    ElementReference elementReference;
+    bool isDirty;
+    bool disposed;
+
     [CascadingParameter] public virtual IGraphViewModel Graph { get; set; } = null!;
 
-    Type type = null!;
     [Parameter] public virtual Type Type { get; set; } = null!;
 
-    IDictionary<string, object>? parameters;
     [Parameter] public virtual IDictionary<string, object> Parameters { get; set; } = null!;
-
-    protected ElementReference elementReference;
-    protected bool isDirty = false;
-    protected ProfilingTimer? profilingTimer;
-    protected bool enableProfiling
-    {
-        get => this.Graph?.EnableProfiling ?? false;
-        set
-        {
-            if (this.Graph != null && this.Graph.EnableProfiling != value) {
-                this.Graph.EnableProfiling = value;
-            }
-            if (value) this.CreateProfilingTimer();
-        }
-    }
-
-    protected void CreateProfilingTimer()
-    {
-        if (this.profilingTimer == null)
-            this.profilingTimer = new ProfilingTimer("InteractiveDynamicComponent " + this.Type.ToString(), 3);
-    }
 
     protected override void OnParametersSet()
     {
@@ -64,8 +42,6 @@
             this.type = this.Type;
             this.isDirty = true;
         }
-        if (this.enableProfiling) this.CreateProfilingTimer();
-        this.profilingTimer?.Start();
     }
 
     protected override bool ShouldRender()
@@ -76,32 +52,12 @@
 
     }
 
-    protected override void OnAfterRender(bool firstRender)
-    {
-        this.profilingTimer?.Stop();
-    }
-
     protected virtual IGraphElement Element => (IGraphElement)this.Parameters["Element"];
 
-    protected virtual async Task HandleOnMouseEnter(MouseEventArgs e) => await this.Graph.OnMouseEnterAsync(this.elementReference, e, this.Element);
-
-    protected virtual async Task HandleOnMouseLeave(MouseEventArgs e) => await this.Graph.OnMouseLeaveAsync(this.elementReference, e, this.Element);
-
-    protected virtual async Task HandleOnMouseDown(MouseEventArgs e) => await this.Graph.OnMouseDownAsync(this.elementReference, e, this.Element);
-
-    protected virtual async Task HandleOnMouseMove(MouseEventArgs e) => await this.Graph.OnMouseMoveAsync(this.elementReference, e, this.Element);
-
-    protected virtual async Task HandleOnMouseUp(MouseEventArgs e) => await this.Graph.OnMouseUpAsync(this.elementReference, e, this.Element);
-    
-    bool disposed;
     protected virtual void Dispose(bool disposing)
     {
         if (!this.disposed)
         {
-            if (this.enableProfiling && this.profilingTimer != null)
-            {
-                this.profilingTimer.Dispose();
-            }
             this.disposed = true;
         }
     }
@@ -111,4 +67,5 @@
         this.Dispose(disposing: true);
         GC.SuppressFinalize(this);
     }
+
 }
