--- a/src/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
+++ b/src/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
@@ -1,65 +1,45 @@
 ﻿@implements IDisposable
 
-<g class="node @Node.CssClass" transform="translate(@((Node.X ?? 0).ToInvariantString()), @((Node.Y ?? 0).ToInvariantString()))">
+<g class="node @Node.CssClass" transform="translate(@Node.Position.X, @Node.Position.Y)">
     <g class="node-shape">
         @if (Node.Shape == NodeShape.Circle)
         {
-            <Circle BBox="Node.BBox" />
+            <Circle Size="Node.Size" />
         }
         else if (Node.Shape == NodeShape.Ellipse)
         {
-            <Ellipse BBox="Node.BBox" />
+            <Ellipse Size="Node.Size" />
         }
         else
         {
-            <Rectangle BBox="Node.BBox" RadiusX="Node.RadiusX" RadiusY="Node.RadiusY" />
+            <Rectangle Size="Node.Size" RadiusX="Node.Radius?.X" RadiusY="Node.Radius?.Y" />
         }
     </g>
     @if (!string.IsNullOrWhiteSpace(Node.Label)) {
         <g class="label">
             <foreignObject 
-                x="@((Node.BBox!.X).ToInvariantString())"
-                y="@((0 - Constants.LabelHeight / 2).ToInvariantString())" 
-                width="@Node.BBox!.Width.ToInvariantString()" 
-                height="@Constants.LabelHeight"
-            >
+                x="@Node.Position.X"
+                y="@(0 - Constants.LabelHeight / 2)" 
+                width="@Node.Size.Width" 
+                height="@Constants.LabelHeight">
                 <div>@Node.Label</div>
             </foreignObject>
         </g>
     }
-    @if (Graph.EnableProfiling) {
-        <circle cx="0" cy="0" r="1" fill="red" />
-    }
 </g>
 
 @code {
-    private IGraphViewModel? graph;
+
+    IGraphViewModel? graph;
+    IGraphElement? element;
+    bool isDirty;
+    bool disposed;
+
     [CascadingParameter] public virtual IGraphViewModel Graph { get; set; } = null!;
 
-    private IGraphElement? element;
     [Parameter] public virtual IGraphElement Element { get; set; } = null!;
 
     protected virtual INodeViewModel Node => (INodeViewModel)this.Element;
-
-    protected bool isDirty = false;    
-    protected ProfilingTimer? profilingTimer;
-    protected bool enableProfiling
-    {
-        get => this.Graph?.EnableProfiling ?? false;
-        set
-        {
-            if (this.Graph != null && this.Graph.EnableProfiling != value) {
-                this.Graph.EnableProfiling = value;
-            }
-            if (value) this.CreateProfilingTimer();
-        }
-    }
-
-    protected virtual void CreateProfilingTimer()
-    {
-        if (this.profilingTimer == null)
-            this.profilingTimer = new ProfilingTimer("NodeTemplate", 3);
-    }
 
     protected override void OnParametersSet()
     {
@@ -74,20 +54,12 @@
             this.Node.Changed += this.TriggerRender;
             this.isDirty = true;
         }
-        if (this.enableProfiling) this.CreateProfilingTimer();
-        this.profilingTimer?.Start();
     }
 
     protected void TriggerRender()
     {
-        this.profilingTimer?.Start();
         this.isDirty = true;
         this.StateHasChanged();
-    }
-
-    protected override void OnAfterRender(bool firstRender)
-    {
-        this.profilingTimer?.Stop();
     }
 
     protected override bool ShouldRender()
@@ -95,19 +67,13 @@
         if (!this.isDirty) return false;
         this.isDirty = false;
         return true;
-
     }
 
-    private bool disposed;
     protected virtual void Dispose(bool disposing)
     {
         if (!this.disposed)
         {
             this.Node.Changed -= this.TriggerRender;
-            if (this.enableProfiling && this.profilingTimer != null)
-            {
-                this.profilingTimer.Dispose();
-            }
             this.disposed = true;
         }
     }
@@ -117,4 +83,5 @@
         this.Dispose(disposing: true);
         GC.SuppressFinalize(this);
     }
+
 }
