style(Blazor.Dagre): added missing svg-definition style
Signed-off-by: Jean-Baptiste Bianchi <jb.bianchi@neuroglia.io>

--- a/src/Neuroglia.Blazor.Dagre/DagreGraph.razor
+++ b/src/Neuroglia.Blazor.Dagre/DagreGraph.razor
@@ -4,7 +4,7 @@
 @implements IDisposable
 
 @if (graph != null) {
-    <svg id="svg-definitions"
+    <svg class="svg-definitions"
          version="1.2"
          baseProfile="tiny"
          xmlns="http://www.w3.org/2000/svg"
