fix(Blazor.Dagre): replaced deprecated xlink:href with href
Signed-off-by: Jean-Baptiste Bianchi <jb.bianchi@neuroglia.io>

--- a/src/Neuroglia.Blazor.Dagre/DagreGraph.razor
+++ b/src/Neuroglia.Blazor.Dagre/DagreGraph.razor
@@ -81,12 +81,12 @@
         <div class="graph-controls">
             <button class="btn" type="button" @onclick="Center" title="center graph">
                 <svg class="icon-target">
-                    <use xlink:href="#center-target" />
+                    <use href="#center-target" />
                 </svg>
             </button>
             <button class="btn" type="button" @onclick="ZoomToFit" title="zoom to fit">
                 <svg class="icon-target">
-                    <use xlink:href="#fit" />
+                    <use href="#fit" />
                 </svg>
             </button>
         </div>
