fix(Blazor.Dagre): used variables for colors in the CSS
Signed-off-by: Jean-Baptiste Bianchi <jb.bianchi@neuroglia.io>

--- a/src/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
+++ b/src/Neuroglia.Blazor.Dagre/Templates/NodeTemplate.razor
@@ -23,7 +23,7 @@
                 width="@Node.BBox!.Width.ToInvariantString()" 
                 height="@Constants.LabelHeight"
             >
-                <div>@Node.Label</div>
+                <div class="label-content">@Node.Label</div>
             </foreignObject>
         </g>
     }
