--- a/src/Neuroglia.Blazor.Dagre/wwwroot/neuroglia-blazor-dagre.scss
+++ b/src/Neuroglia.Blazor.Dagre/wwwroot/neuroglia-blazor-dagre.scss
@@ -1,4 +1,9 @@
-﻿.svg-definitions {
+﻿:root {
+    --stroke-color: #333;
+    --fill-color: #fff;
+}
+
+.svg-definitions {
     width: 0 !important;
     height: 0 !important;
     margin: 0 !important;
@@ -17,8 +22,8 @@
     rect,
     circle,
     ellipse {
-        stroke: #333;
-        fill: #fff;
+        stroke: var(--stroke-color);
+        fill: var(--fill-color);
         stroke-width: 1px;
     }
 }
@@ -26,7 +31,7 @@
 .edge-path {
     path {
         fill: none;
-        stroke: #333;
+        stroke: var(--stroke-color);
         stroke-width: 1.5px;
     }
 }
@@ -37,7 +42,7 @@
     }
 }
 
-.label div {
+.label-content {
     text-align: center;
     white-space: nowrap;
     text-overflow: ellipsis;
@@ -45,29 +50,31 @@
 }
 
 #end-arrow {
-    fill: #333;
+    fill: var(--stroke-color);
 }
 
-.graph-controls .btn {
-    border: 1px solid transparent;
-    padding: 0.25rem 0.25rem;
-    line-height: 0.5;
-    border-radius: 0.25rem;
-    vertical-align: middle;
-    color: #333;
-    fill: #333;
-    border-color: #333;
-    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
+.graph-controls {
+    .btn {
+        border: 1px solid transparent;
+        padding: 0.25rem 0.25rem;
+        line-height: 0.5;
+        border-radius: 0.25rem;
+        vertical-align: middle;
+        color: var(--stroke-color);
+        fill: var(--stroke-color);
+        border-color: var(--stroke-color);
+        transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 
-.graph-controls .btn svg {
-    width: 18px;
-    height: 18px;
-}
+        svg {
+            width: 18px;
+            height: 18px;
+        }
 
-.graph-controls .btn:hover {
-    color: #fff;
-    fill: #fff;
-    background-color: #333;
-    border-color: #333;
+        &:hover {
+            color: var(--fill-color);
+            fill: var(--fill-color);
+            background-color: var(--stroke-color);
+            border-color: var(--stroke-color);
+        }
+    }
 }
